# voxelEngine

./: CMakeLists.txt  README.md
include/: FastNoiseLite.h  blockTypes.h  camera.h  chunk.h  customgui.h  lodes.h  noise.h  player.h  settings.h  shader.h  voxelData.h  world.h
include/glad/: glad.h
src/: 1.shader.fs  camera.h  chunk.cpp  fragment.glsl  glad.c  hud.fs  hud.vs  main.cpp  outline_geometry.glsl  outline_vertex.glsl  player.h  s.cs  settings.h  shader.h  vertex.glsl  voxelData.cpp  voxelData.h
